# maturita_AI

./: .gitignore  Llama3.1Modelfile  Llama3.2Modelfile  README.md  create-llama3.1-modelfile.sh  index.html  package-lock.json  package.json  requirements.txt  setup.py  vite.config.js
__praca-MS__/: Aplikacny Softver - AI Chatbot-Fixed.docx  Aplikacny Softver - AI Chatbot.docx
buddy/: Chatbot_CrewAI_Structure.md  README.md  main.py  pyproject.toml
buddy/Data_Gathering_and_Analysis_Crew/: Data_Analysis_Crew.py
buddy/Data_Gathering_and_Analysis_Crew/config/: agents.yaml  tasks.yaml
buddy/MarketAnalysis_crew/: MarketAnalysisCrew.py
buddy/MarketAnalysis_crew/config/: tasks.yaml
buddy/Quality_Assurance_Fact-Checking_Crew/: Fact_Check_Crew.py
buddy/Quality_Assurance_Fact-Checking_Crew/config/: agents.yaml
buddy/Quality_Assurance_Fact_Checking_Crew/: Fact_Check_Crew.py
buddy/Quality_Assurance_Fact_Checking_Crew/config/: tasks.yaml
buddy/Strategy_Recommendation_Crew/: Strategy_Crew.py
buddy/Strategy_Recommendation_Crew/config/: agents.yaml  tasks.yaml
buddy/User_Input_Processing_Crew/: User_Input_Crew.py
buddy/User_Input_Processing_Crew/config/: agents.yaml  tasks.yaml
buddy/src/buddy/: crew.py  main.py
buddy/src/buddy/config/: agents.yaml
buddy/tools/: serper_tool.py
src/: App.jsx  main.jsx
src/backend/: __init__.py  app.py  config.py  models.py
src/frontend/: LandingPage.jsx
src/frontend/components/: Benefits.jsx  Chat.jsx  Features.jsx  Footer.jsx  HeroSection.jsx  Login.jsx  Navbar.jsx  Pricing.jsx  SignUp.jsx  TutorialPage.jsx
(+3 files in other folders)
