[project]
name = "buddy"
version = "0.1.0"
description = "buddy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
buddy = "buddy.main:run"
run_crew = "buddy.main:run"
train = "buddy.main:train"
replay = "buddy.main:replay"
test = "buddy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
